--- a/src/main/resources/assets/ultimatum/lang/en_us.json
+++ b/src/main/resources/assets/ultimatum/lang/en_us.json
@@ -24,6 +24,11 @@
   "item.ultimatum.ultimate_axe": "Ultimate Axe",
   "item.ultimatum.ultimate_shovel": "Ultimate Shovel",
   "item.ultimatum.ultimate_hoe": "Ultimate Hoe",
+  "item.ultimatum.ultimate_bow": "Ultimate Bow",
+  "item.ultimatum.ultimate_helmet": "Ultimate Helmet",
+  "item.ultimatum.ultimate_chestplate": "Ultimate Chestplate",
+  "item.ultimatum.ultimate_leggings": "Ultimate Leggings",
+  "item.ultimatum.ultimate_boots": "Ultimate Boots",
 
   "block.ultimatum.necronium_essence": "Necronium Essence",
   "block.ultimatum.necronium_block": "Necronium Block",
