lots more added

--- a/src/main/resources/assets/ultimatum/lang/en_us.json
+++ b/src/main/resources/assets/ultimatum/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.ultimatum.necronium_dust": "Necronium Dust",
   "item.ultimatum.necronium_ingot": "Necronium Ingot",
   "item.ultimatum.necronium_stick": "Necronium Stick",
+  "item.ultimatum.necronium_heart": "Necronium Heart",
 
   "item.ultimatum.wooden_catalyst": "Wooden Catalyst",
   "item.ultimatum.stone_catalyst": "Stone Catalyst",
@@ -12,6 +13,21 @@
   "item.ultimatum.lapis_catalyst": "Lapis Catalyst",
   "item.ultimatum.diamond_catalyst": "Diamond Catalyst",
   "item.ultimatum.netherite_catalyst": "Netherite Catalyst",
+  "item.ultimatum.nether_star_catalyst": "Nether Star Catalyst",
+  "item.ultimatum.mithril_catalyst": "Mithril Catalyst",
+  "item.ultimatum.dragon_catalyst": "Dragon Catalyst",
+
+  "item.ultimatum.stone_stick": "Stone Stick",
+  "item.ultimatum.coal_stick": "Coal Stick",
+  "item.ultimatum.copper_stick": "Copper Stick",
+  "item.ultimatum.iron_stick": "Iron Stick",
+  "item.ultimatum.redstone_stick": "Redstone Stick",
+  "item.ultimatum.lapis_stick": "Lapis Stick",
+  "item.ultimatum.diamond_stick": "Diamond Stick",
+  "item.ultimatum.netherite_stick": "Netherite Stick",
+  "item.ultimatum.nether_star_stick": "Nether Star Stick",
+  "item.ultimatum.mithril_stick": "Mithril Stick",
+  "item.ultimatum.dragon_stick": "Dragon Stick",
 
   "item.ultimatum.enchanted_netherite_apple": "Enchanted Netherite Apple",
 
@@ -29,6 +45,22 @@
   "item.ultimatum.ultimate_chestplate": "Ultimate Chestplate",
   "item.ultimatum.ultimate_leggings": "Ultimate Leggings",
   "item.ultimatum.ultimate_boots": "Ultimate Boots",
+
+  "item.ultimatum.raw_mithril": "Raw Mithril",
+  "item.ultimatum.mithril_ingot": "Mithril Ingot",
+  "block.ultimatum.mithril_block": "Mithril Block",
+  "block.ultimatum.mithril_ore": "Mithril Ore",
+  "block.ultimatum.deepslate_mithril_ore": "Deepslate Mithril Ore",
+  "item.ultimatum.mithril_sword": "Mithril Sword",
+  "item.ultimatum.mithril_pickaxe": "Mithril Pickaxe",
+  "item.ultimatum.mithril_axe": "Mithril Axe",
+  "item.ultimatum.mithril_shovel": "Mithril Shovel",
+  "item.ultimatum.mithril_hoe": "Mithril Hoe",
+  "item.ultimatum.mithril_bow": "Mithril Bow",
+  "item.ultimatum.mithril_helmet": "Mithril Helmet",
+  "item.ultimatum.mithril_chestplate": "Mithril Chestplate",
+  "item.ultimatum.mithril_leggings": "Mithril Leggings",
+  "item.ultimatum.mithril_boots": "Mithril Boots",
 
   "block.ultimatum.necronium_essence": "Necronium Essence",
   "block.ultimatum.necronium_block": "Necronium Block",
