new mob and dimension

--- a/src/main/resources/assets/ultimatum/lang/en_us.json
+++ b/src/main/resources/assets/ultimatum/lang/en_us.json
@@ -67,5 +67,7 @@
 
   "block.ultimatum.enchanted_netherite_block": "Enchanted Netherite Block",
 
+  "item.ultimatum.shadow_golem_spawn_egg": "Shadow Golem Spawn Egg",
+
   "itemGroup.ultimatum.ultimatum": "Ultimatum"
 }
